name:                jle-utils
version:             0.1.0.0
synopsis:            Suite of general utility scripts I use to navigate life.
description:         Please see README.md
homepage:            http://github.com/mstksg/jle-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable jle-git-haddocks
  hs-source-dirs:      app
  main-is:             GitHaddocks.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , conduit
                     , conduit-combinators
                     , directory
                     , exceptions
                     , filepath
                     , gitlib
                     , gitlib-libgit2
                     , jle-utils
                     , monad-logger
                     , process
                     , tagged
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010

test-suite jle-utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jle-utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/jle-utils
