name:                jle-utils
version:             0.1.1.0
synopsis:            Suite of general utility scripts I use to navigate life.
description:         Please see README.md
homepage:            http://github.com/mstksg/jle-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JUtils.GHPages
  build-depends:       base >= 4.7 && < 5
                     , conduit-combinators
                     , directory
                     , exceptions
                     , transformers-base
                     , filepath
                     , gitlib
                     , gitlib-libgit2
                     , monad-control
                     , monad-logger
                     , tagged
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable jle-git-haddocks
  hs-source-dirs:      app
  main-is:             GitHaddocks.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , conduit
                     , conduit-combinators
                     , directory
                     , exceptions
                     , filepath
                     , gitlib
                     , gitlib-libgit2
                     , jle-utils
                     , monad-logger
                     , optparse-applicative
                     , process
                     , tagged
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable jle-update-gh-pages
  hs-source-dirs:      app
  main-is:             UpdateGHPages.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , conduit
                     , conduit-combinators
                     , directory
                     , exceptions
                     , filepath
                     , gitlib
                     , gitlib-libgit2
                     , jle-utils
                     , monad-logger
                     , optparse-applicative
                     , process
                     , tagged
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable jle-update-currencies
  hs-source-dirs:      app
  main-is:             UpdateCurrencies.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , containers
                     , hledger-lib
                     , lens
                     , lens-aeson
                     , text
                     , time
                     , wreq
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite jle-utils-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jle-utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/jle-utils
